# mcp-refchecker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  smithery.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  upstream-compat.yml
devlog/: 2026-04-08.md  2026-04-10.md
mcp_refchecker/: __init__.py  server.py
tests/: test_verify_citation.py
